Changement: couleur et ombre sur titre

--- a/Error404.html
+++ b/Error404.html
@@ -9,7 +9,7 @@
         <a href="Error404English.html"><img class="flag" src="english-flag.png"/></a><a href="Error404.html"><img class="flag" src="France-Flag.png"></a>
 
 
-      <h1><center>Erreur 404</h1></center>
+      <h1 class="titre"><center>Erreur 404</h1></center></class>
       
 
       
