Changement taille titre

--- a/Error404english.html
+++ b/Error404english.html
@@ -6,7 +6,7 @@
     </head>
     <body>
             <a href="Error404English.html"><img class="flag" src="english-flag.png"/></a><a href="Error404.html"><img class="flag" src="France-Flag.png"></a>
-      <h1><center>Error 404</h1></center>
+      <h1 class="titre"><center>Error 404</h1></center>
       
 
       
