suppression de code sur "sorry this page doesn't exist"

--- a/Error404english.html
+++ b/Error404english.html
@@ -13,8 +13,7 @@
       <center>Sorry this page doesn't exist</center>
       <center><img class="gif" src="Pulpfiction.gif"></center> 
      
-      <center><div  class="text" style="width: 600px;  padding-top:10px; padding-bottom:10px;
-     border: 3px solid #A0A0A0; text-align: center;background: #C0C0C0;">
+      <center><div  class="text">
        <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
        If you typed the URL in the address bar, check if it's the good one.</center></div>
 
